--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dependencies:
   # webview_flutter: ^3.0.0
   cached_network_image: ^3.2.0
   carousel_slider: ^4.0.0
+  firebase_auth: ^3.3.5
+  cloud_firestore: ^3.1.6
+  #---------------------
+  # flushbar: ^1.10.4
+  another_flushbar: ^1.10.28
+
+  shared_preferences: ^2.0.12
+
   # intl: ^0.17.0
   # flushbar: ^1.10.4
   # shared_preferences: ^2.0.12
@@ -62,7 +70,7 @@ flutter:
     - assets/flags/
     - assets/launcher/
   #  - images/a_ - family: Montserrat
-       
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -73,14 +81,14 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: Montserrat
-       fonts:
-         - asset: fonts/Montserrat-Bold.ttf
-           weight: 700
-         - asset: fonts/Montserrat-SemiBold.ttf
-           weight: 600
-         - asset: fonts/Montserrat-Regular.ttf
-           weight: 400
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 400
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
