--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_svg: ^0.19.1
+  flutter_svg: ^1.0.3
   provider: ^6.0.2
   http: ^0.13.4
   auto_size_text: ^3.0.0
@@ -38,14 +38,26 @@ dependencies:
   another_flushbar: ^1.10.28
 
   shared_preferences: ^2.0.12
+  objectbox: ^1.3.8
+  objectbox_flutter_libs: any
+  device_info_plus:
+  flutter_nearby_connections:
+  get: ^4.6.1
+
+  # path_provider: ^1.6.27
 
   # intl: ^0.17.0
   # flushbar: ^1.10.4
   # shared_preferences: ^2.0.12
 
+dependency_overrides:
+  analyzer: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0
+  objectbox_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
